--- a/index.html
+++ b/index.html
@@ -23,17 +23,26 @@
         </style>
     </head>
     <body>
+        <hr>
         <h1>Makerspace Dashboard</h1>
+        <hr>
+        <h2 style="text-decoration: underline;">3D Printere (Brukernavn: Makerspace, Passord: user)</h2>
         <table>
             <tr><th>Navn</th><th>Type</th><th>Adresse</th><th>Status</th></tr>
             <tr><td>400</td><td>Ender 3</td><td><a href = "http://192.168.3.103:5002/" target="_blank">http://192.168.3.103:5002/</a></td><td></td></tr>
             <tr><td>Forrest Gump</td><td>Ender 3</td><td><a href = "http://192.168.3.103:5003/" target="_blank">http://192.168.3.103:5003/</a></td><td></td></tr>
             <tr><td>Katniss</td><td>Ender 3</td><td><a href = "http://192.168.3.105:5000/" target="_blank">http://192.168.3.105:5000/</a></td><td></td></tr>
             <tr><td>The Godfather</td><td>Ender 3</td><td><a href = "http://192.168.3.102:5003/" target="_blank">http://192.168.3.102:5003/</a></td><td></td></tr>
-            <tr><td></td><td>Ender 3</td><td><a href = "" target="_blank"></a></td><td></td></tr>
-            <tr><td></td><td>Ender 3</td><td><a href = "" target="_blank"></a></td><td></td></tr>
-            <tr><td></td><td>Ender 3</td><td><a href = "" target="_blank"></a></td><td></td></tr>
-            <tr><td></td><td>Ender 3</td><td><a href = "" target="_blank"></a></td><td></td></tr>
+            <tr><td>Tritonus</td><td>Ender 3</td><td><a href = "http://192.168.3.104:5000/" target="_blank">http://192.168.3.104:5000/</a></td><td></td></tr>
+            <tr><td>Lost</td><td>Ender 3</td><td><a href = "http://192.168.3.105:5001/" target="_blank">http://192.168.3.105:5001/</a></td><td></td></tr>
+            <tr><td>Darth vader</td><td>Ender 3</td><td><a href = "http://192.168.3.104:5002/" target="_blank">http://192.168.3.104:5002/</a></td><td></td></tr>
+            <tr><td>Tik</td><td>Ender 3</td><td><a href = "http://192.168.3.105:5002/" target="_blank">http://192.168.3.105:5002/</a></td><td></td></tr>
+            <tr><td>Spark</td><td>Ender 3</td><td><a href = "" target="_blank"></a></td><td></td></tr>
+            <tr><td>Toad</td><td>Ender 3</td><td><a href = "http://192.168.3.104:5001/" target="_blank">http://192.168.3.104:5001/</a></td><td></td></tr>
+            <tr><td>C-3PO</td><td>Ender 3</td><td><a href = "http://192.168.3.104:5003/" target="_blank">http://192.168.3.104:5003/</a></td><td></td></tr>
+            <tr><td>Luke</td><td>Ender 3</td><td><a href = "http://192.168.3.110:5000/" target="_blank">http://192.168.3.110:5000/</a></td><td></td></tr>
+            <tr><td>RGB</td><td>Ender 3</td><td><a href = "http://192.168.3.110:5002/" target="_blank">http://192.168.3.110:5002/</a></td><td></td></tr>
+            <tr><td>Baymax</td><td>Ender 3</td><td><a href = "http://192.168.3.110:5001/?" target="_blank">http://192.168.3.110:5001/?</a></td><td></td></tr>
             <tr><td>Bulbasaur</td><td>Ender 3 V2</td><td><a href = "http://192.168.3.103:5000/" target="_blank">http://192.168.3.103:5000/</a></td><td></td></tr>
             <tr><td>Turnip head</td><td>Ender 3 V2</td><td><a href = "http://192.168.3.102:5000/" target="_blank">http://192.168.3.102:5000/</a></td><td></td></tr>
             <tr><td>Roger</td><td>Ender 3 V2</td><td><a href = "http://192.168.3.102:5001/" target="_blank">http://192.168.3.102:5001/</a></td><td></td></tr>
