--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
                 border-radius: 5px;
                 transition: background-color 0.3s ease;
             }
+            #refreshButton:hover{
+                cursor: pointer;
+            }
+            #refreshButton {
+                cursor: pointer;
+                padding: 2px 5px;
+                border-radius: 5px;
+                transition: background-color 0.3s ease;
+            }
             body {
                 font-family: Arial, sans-serif;
                 margin: 0;
@@ -62,8 +71,63 @@
                 margin: 8px 0;
                 box-sizing: border-box;
             }
+            .status-cell {
+                position: relative;
+            }
+
+            .status-progress {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                border-radius: 0;
+                height: 10%;
+            }
+            #printerTable th:nth-child(4) {
+                width: 20%; /* Adjust this value as needed */
+            }
+
+            .tooltip {
+                cursor: pointer;
+            }
         </style>
+    </head>
+    <body>
+        <hr>
+        <h1>Makerspace Dashboard</h1>
+        <hr>
+        <h2 style="text-decoration: underline; padding-left: 1%;">3D Printere (Brukernavn: Makerspace, Passord: user)</h2>
+        <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search for printers...">
+        <table id="printerTable">
+            <thead id="printerTableHeader">
+            <tr><th>Navn <span class="sortable" onclick="sortTable(0)">&darr;</span></th>
+                <th>Type <span class="sortable" onclick="sortTable(1)">&darr;</span></th>
+                <th>Adresse <span class="sortable" onclick="sortTable(2)">&darr;</span></th>
+                <th>Status <button id="refreshButton">Refresh</button><span class="sortable" onclick="sortTable(3)">&darr;</span><div id="countdown">(Updates in 10 seconds)</div></th></tr>
+            </thead>
+            <tbody id="printerTableBody">
+            </tbody>
+        </table>
+        <div id="loading" style="display: block;">(Fetching printer data...)</div>
         <script>
+            // A function to update the countdown text
+            function updateCountdown() {
+                // Update the countdown display
+                if (countdown == 0) {
+                    document.getElementById('countdown').textContent = '(Updating...)';
+                } else if (countdown == 1) {
+                    document.getElementById('countdown').textContent = '(Updates in ' + countdown + ' second)';
+                } else {
+                    document.getElementById('countdown').textContent = '(Updates in ' + countdown + ' seconds)';
+                }
+                // Decrement the countdown
+                countdown--;
+            }
+            // Update the countdown every second
+            let countdown = 10;
+            setInterval(updateCountdown, 1000);
+            // Refresh the table every 10 seconds
+            setInterval(refreshTable, 10000);
+
             function searchFunction() {
               // Declare variables
               var input, filter, table, tr, td, i, txtValue;
@@ -85,6 +149,9 @@
                 }
               }
             }
+            // Variables to save the last sort column and order so the sort can be reapplied after the table is refreshed
+            let lastSortColumn = null;
+            let lastSortOrder = null;
             function sortTable(n) {
                 var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
                 table = document.getElementById("printerTable");
@@ -100,82 +167,128 @@
                     /* Loop through all table rows (except the
                     first, which contains table headers): */
                     for (i = 1; i < (rows.length - 1); i++) {
-                    // Start by saying there should be no switching:
-                    shouldSwitch = false;
-                    /* Get the two elements you want to compare,
-                    one from current row and one from the next: */
-                    x = rows[i].getElementsByTagName("TD")[n];
-                    y = rows[i + 1].getElementsByTagName("TD")[n];
-                    /* Check if the two rows should switch place,
-                    based on the direction, asc or desc: */
-                    if (dir == "asc") {
-                        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
-                        // If so, mark as a switch and break the loop:
-                        shouldSwitch = true;
-                        break;
+                        // Start by saying there should be no switching:
+                        shouldSwitch = false;
+                        /* Get the two elements you want to compare,
+                        one from current row and one from the next: */
+                        x = rows[i].getElementsByTagName("TD")[n];
+                        y = rows[i + 1].getElementsByTagName("TD")[n];
+                        /* Check if the two rows should switch place,
+                        based on the direction, asc or desc: */
+                        if (dir == "asc") {
+                            if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+                            // If so, mark as a switch and break the loop:
+                            shouldSwitch = true;
+                            break;
+                            }
+                        } else if (dir == "desc") {
+                            if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+                            // If so, mark as a switch and break the loop:
+                            shouldSwitch = true;
+                            break;
+                            }
                         }
-                    } else if (dir == "desc") {
-                        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
-                        // If so, mark as a switch and break the loop:
-                        shouldSwitch = true;
-                        break;
-                        }
-                    }
                     }
                     if (shouldSwitch) {
-                    /* If a switch has been marked, make the switch
-                    and mark that a switch has been done: */
-                    rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-                    switching = true;
-                    // Each time a switch is done, increase this count by 1:
-                    switchcount ++; 
-                    } else {
-                    /* If no switching has been done AND the direction is "asc",
-                    set the direction to "desc" and run the while loop again. */
-                    if (switchcount == 0 && dir == "asc") {
-                        dir = "desc";
+                        /* If a switch has been marked, make the switch
+                        and mark that a switch has been done: */
+                        rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
                         switching = true;
-                    }
+                        // Each time a switch is done, increase this count by 1:
+                        switchcount ++; 
+                        } else {
+                        /* If no switching has been done AND the direction is "asc",
+                        set the direction to "desc" and run the while loop again. */
+                        if (switchcount == 0 && dir == "asc") {
+                            dir = "desc";
+                            switching = true;
+                        }
                     }
                 }
+                // Save the last sort column and order so the sort can be reapplied after the table is refreshed
+                lastSortColumn = n;
+                if (dir == "asc") {
+                    lastSortOrder = "asc";
+                } else {
+                    lastSortOrder = "desc";
                 }
-                window.onload = function() {
-                    document.getElementById('loading').style.display = 'block';
-                    fetch('printers.json')
-                    .then(response => response.json())
-                    .then(data => {
-                        var table = document.getElementById('printerTable');
-                        data.forEach(item => {
-                            var row = table.insertRow(-1);
-                            var cell1 = row.insertCell(0);
-                            var cell2 = row.insertCell(1);
-                            var cell3 = row.insertCell(2);
-                            var cell4 = row.insertCell(3);
-                            cell1.innerHTML = item.name;
-                            cell2.innerHTML = item.type;
-                            cell3.innerHTML = '<a href="' + item.address + '" target="_blank">' + item.address + '</a>';
-                            cell4.innerHTML = item.status;
-                            // Hide loading text
-                            document.getElementById('loading').style.display = 'none';
-                        });
-                    })
-                    .catch(error => {
-                        console.error('Error:', error);
+            }
+            // Refresh the table when the page loads
+            window.onload = function() {
+                refreshTable();
+            }
+            function refreshTable() {
+                // Clear the table
+                document.getElementById('printerTableBody').innerHTML = '';
+                // Display loading text
+                document.getElementById('loading').style.display = 'block';
+                // Fetch the printerdata
+                fetch('printerdata.json')
+                .then(response => response.json())
+                .then(data => {
+                    var table = document.getElementById('printerTableBody');
+                    data.forEach(item => {
+                        var row = table.insertRow(-1);
+                        var cell1 = row.insertCell(0);
+                        var cell2 = row.insertCell(1);
+                        var cell3 = row.insertCell(2);
+                        var cell4 = row.insertCell(3);
+                        cell1.innerHTML = item.name + " (Data fetched at:" + item.updatetime + ")";
+                        cell2.innerHTML = item.type;
+                        cell3.innerHTML = '<a href="' + item.address + '" target="_blank">' + item.address + '</a>';
+                        cell4.innerHTML = item.status;
+                        cell4.className = 'status-cell';
+                        // Cleaning the status
+                        if (item.status == "Printing") {
+                            cell4.innerHTML = '<div>' + item.status + ' (' + Math.round(item.progress) + '%)</div>' + '<div><progress class="status-progress" value="' + item.progress + '" max="100"></progress></div>';
+                            cell4.style.backgroundColor = '#ff8c00';
+                        }
+                        else if (item.status == "Operational") {
+                            cell4.style.backgroundColor = '#00ff77';
+                        }
+                        else if (item.status == "Paused") {
+                            cell4.innerHTML = '<div>' + item.status + ' (' + item.progress + '%)</div>' + '<div><progress class="status-progress" value="' + item.progress + '" max="100"></progress></div>';
+                            cell4.style.backgroundColor = '#2b8eff';
+                        }
+                        else if(item.status == "Offline after error") {
+                            cell4.innerHTML = "(Probably) Turned off" + "<span class = 'tooltip' title='Offline after error'>🛈</span>";
+                            cell4.style.backgroundColor = '#696969';
+                        }
+                        else if (item.status == "Offline") {
+                            cell4.style.backgroundColor = '#872727';
+                        }
+                        else if (item.status == null) {
+                            cell4.innerHTML = "unknown";
+                        }
+
                         // Hide loading text
                         document.getElementById('loading').style.display = 'none';
+                        // Reapply the sort
+                        if (lastSortColumn !== null) {
+                            sortTable(lastSortColumn);
+                            // If your sort function doesn't automatically toggle the sort order,
+                            // you might need to apply the sort twice to get the correct order
+                            if (lastSortOrder === "desc") {
+                                console.log('Sorting again');
+                                sortTable(lastSortColumn);
+                            }
+                        }
+                        // Reset the countdown
+                        countdown = 9;
+                        searchFunction();
                     });
-                }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    // Hide loading text
+                    document.getElementById('loading').style.display = 'none';
+                    // Reset the countdown
+                    countdown = 9;
+                });
+            }
+
+            // Add an event listener to the button
+            document.getElementById('refreshButton').addEventListener('click', refreshTable);
         </script>
-    </head>
-    <body>
-        <hr>
-        <h1>Makerspace Dashboard</h1>
-        <hr>
-        <h2 style="text-decoration: underline; padding-left: 1%;">3D Printere (Brukernavn: Makerspace, Passord: user)</h2>
-        <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search for printers...">
-        <table id="printerTable">
-            <tr><th>Navn <span class="sortable" onclick="sortTable(0)">&darr;</span></th><th>Type <span class="sortable" onclick="sortTable(1)">&darr;</span></th><th>Adresse <span class="sortable" onclick="sortTable(2)">&darr;</span></th><th>Status <span class="sortable" onclick="sortTable(3)">&darr;</span></th></tr>
-        </table>
-        <div id="loading">Fetching printer data...</div>
     </body>
 </html>
