--- a/index.html
+++ b/index.html
@@ -290,5 +290,28 @@
             // Add an event listener to the button
             document.getElementById('refreshButton').addEventListener('click', refreshTable);
         </script>
+        <script type="module">
+            // Import the functions you need from the SDKs you need
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+            import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+            // TODO: Add SDKs for Firebase products that you want to use
+            // https://firebase.google.com/docs/web/setup#available-libraries
+          
+            // Your web app's Firebase configuration
+            // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+            const firebaseConfig = {
+              apiKey: "AIzaSyBwLtYu0WaEBKMSrXlB2UDnTmhxnMU_ZBA",
+              authDomain: "makerspacedashboard.firebaseapp.com",
+              projectId: "makerspacedashboard",
+              storageBucket: "makerspacedashboard.appspot.com",
+              messagingSenderId: "605408161279",
+              appId: "1:605408161279:web:9ec6c228dcfe159fc54bca",
+              measurementId: "G-VVJK0HZ3HZ"
+            };
+          
+            // Initialize Firebase
+            const app = initializeApp(firebaseConfig);
+            const analytics = getAnalytics(app);
+        </script>
     </body>
 </html>
