It works again!

--- a/index.html
+++ b/index.html
@@ -122,18 +122,15 @@
         <script>
         // Your web app's Firebase configuration
         var firebaseConfig = {
-            "type": "service_account",
-            "projectId": "makerspacedashboard",
-            "private_key_id": "72fd4555ed94f344d10a12bcef00bfe120e1c928",
-            "private_key": "-----BEGIN PRIVATE KEY-----\nMIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC1ng0BnDLQujPY\nQ7HG37WlHbS6dT4GAPbWuaRRXw9BfIuNBEklEkoz6Lnxwp0ezSM/dGrSSpbIUr27\ntOiAdoVWaR3JurDgXdeKZGYPZWZGgB7jF9jFLwsQu3858gUSYG3WA2RBSr56na3j\nMWv+pfWjKAFitU7aUBR5ucmIEhuvtAjuC1442AIcRBgxmMM+M9E1JkjM5sb3sdUn\nlpKW/hFjrvfvrtbPoS4LdEuhe0saNN1sBP4jTkpsdI3ZG9SEV/9oGS15QxHb+Md4\nA3cjTwHWU5aUstLbOQpgyvqvKMugaipnnmsqXUggndvj0V8reM160PA21Uszpr6H\nEVaHXAnPAgMBAAECggEAGRI7a2h7n1LFC2q05OZG9gc2xrKeoEeLy7KO22jK+1hN\nD2dzDXoL4kSTPquF8xWQcxcIFAWV8QtzA7GCkxFJcNdL9GggOKjbs1AOwrtVtg/D\ns8e79eR7m5C2jHI7fwDuyKdpNJYz20tfEMjmxp10XlSMdGrg+sQpP3CFQJJ3Xfa5\nun9xfbAh9xlkp4ns/Sioh2lPboFekaMDj+Mxc1pBpV1wn6mJvUE12sfxAEBfRA8s\nKGedsgqGi8e8k+8igGNLtFE30rjju1d3OfAXv5T5f6CfAvS55iUZjAFYcHmzCTCk\n6SKOYp45g1l99ULj26lbT2F9Lc0OR9WEgwDYlt16YQKBgQDpDcxJ/1KnSw+Jkurc\nuZW3FbukBo0wSVDO6hItvLtj1/jTrsvceZX0VJvf4RNABjs2lbHd/mnG7W5zn5cw\ntGe+9drweQCXhmjUsp/tLIVaH9fXS8c9uJ17lqfESeqiXc56eDrlHPPtw+2DV+l1\ntVoEugZftDTh1RQk5i83Fz61sQKBgQDHf8c28OTdp4reclmstJ5k0u9qhGVi3qo4\n5OYfAD4txMiQJVIzY1g+8wnGxsp5BtVIyoDLJo5OLTXM7W++n2pZajWE2ROwzHzU\n/dTnfmSpen21u4d5GMnqm/0c0gLkupEZ+BAIovhyDvUu2Bz2//m+oVv+WYh/pFuj\nYEWY3f0XfwKBgQDcg+TII6HWj6xs9SnrnmKuMQ8yPcy8YrLmhg6bXlhFOebEjUFy\nJU2hOamf5b0sOHkwxeXd8sutoZ2AJAKP4DPGOaVnImdP+KsajsXKSfUH+NdnbNli\nalwAw+WMUpCD/5TOxxKbFZEtadVEERvi96zsigRb7AyZnt+HppIIY6M/kQKBgCPS\nlfsPlokWpKD8941DgY2pMsR1sZ7nTLmaoJfAe2nMhBceHHyNwjLLgV3oJENHLtU7\nR5Uy/yqag6agnAgmp/oWUDXipN6CWYgFbE2FLJ4iGKChY9oi0V8HU5PxQgPAXH3F\nRVvHp8UTWoNm2wyfOkE4yEQL367L3IihqN2iPugRAoGAHN5lKBruiJWP97TlrOoI\n4I+yQA6k1YCgVIxsfS8JafPmlTKJ78HbIfpx4OZvF4pX4jH28qIqyIB6HvocCSX3\nprnTKbxQQ/IIFKmIwgXsApw2FAFjuaz22oAiTzkixWQX8yjDGQLXffstu1ZthzWx\nvObB/xjGfQfn+4OSf6Hg0Us=\n-----END PRIVATE KEY-----\n",
-            "client_email": "firebase-adminsdk-pdghj@makerspacedashboard.iam.gserviceaccount.com",
-            "client_id": "103972358985336492558",
-            "auth_uri": "https://accounts.google.com/o/oauth2/auth",
-            "token_uri": "https://oauth2.googleapis.com/token",
-            "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
-            "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-pdghj%40makerspacedashboard.iam.gserviceaccount.com",
-            "universe_domain": "googleapis.com"
-        };
+            apiKey: "AIzaSyDtKlPwO4UxT_0kWsX96JvkD6OnAJCOfmI",
+            authDomain: "skaperverksteddashboard.firebaseapp.com",
+            databaseURL: "https://skaperverksteddashboard-default-rtdb.europe-west1.firebasedatabase.app",
+            projectId: "skaperverksteddashboard",
+            storageBucket: "skaperverksteddashboard.appspot.com",
+            messagingSenderId: "1090834636414",
+            appId: "1:1090834636414:web:a0646bd46cbca986b5422f",
+            measurementId: "G-XHB1R8GWF0"
+            };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         </script>
@@ -256,7 +253,7 @@
                 var db = firebase.firestore();
 
                 // Fetch the printerdata from Firestore
-                db.collection("printers").get().then((querySnapshot) => {
+                db.collection("printerdata").get().then((querySnapshot) => {
                     var table = document.getElementById('printerTableBody');
                     querySnapshot.forEach((doc) => {
                         var item = doc.data();
@@ -331,14 +328,15 @@
           
             // Your web app's Firebase configuration
             // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-            const firebaseConfig = {
-              apiKey: "AIzaSyBwLtYu0WaEBKMSrXlB2UDnTmhxnMU_ZBA",
-              authDomain: "makerspacedashboard.firebaseapp.com",
-              projectId: "makerspacedashboard",
-              storageBucket: "makerspacedashboard.appspot.com",
-              messagingSenderId: "605408161279",
-              appId: "1:605408161279:web:9ec6c228dcfe159fc54bca",
-              measurementId: "G-VVJK0HZ3HZ"
+            var firebaseConfig = {
+                apiKey: "AIzaSyDtKlPwO4UxT_0kWsX96JvkD6OnAJCOfmI",
+                authDomain: "skaperverksteddashboard.firebaseapp.com",
+                databaseURL: "https://skaperverksteddashboard-default-rtdb.europe-west1.firebasedatabase.app",
+                projectId: "skaperverksteddashboard",
+                storageBucket: "skaperverksteddashboard.appspot.com",
+                messagingSenderId: "1090834636414",
+                appId: "1:1090834636414:web:a0646bd46cbca986b5422f",
+                measurementId: "G-XHB1R8GWF0"
             };
           
             // Initialize Firebase
