--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
         <table id="printerTable">
             <thead id="printerTableHeader">
             <tr><th>Navn <span class="sortable" onclick="sortTable(0)">&darr;</span></th>
-                <th>Type <span class="sortable" onclick="sortTable(1)">&darr;</span></th>
+                <th>Model <span class="sortable" onclick="sortTable(1)">&darr;</span></th>
                 <th>Adresse <span class="sortable" onclick="sortTable(2)">&darr;</span></th>
-                <th>Status <button id="refreshButton">Refresh</button><span class="sortable" onclick="sortTable(3)">&darr;</span><div id="countdown">(Updates in 10 seconds)</div></th></tr>
+                <th>Status <button id="refreshButton">Refresh</button><span class="sortable" onclick="sortTable(3)">&darr;</span></div></th></tr>
             </thead>
             <tbody id="printerTableBody">
             </tbody>
@@ -134,26 +134,7 @@
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
         </script>
-        <script>
-            // A function to update the countdown text
-            function updateCountdown() {
-                // Update the countdown display
-                if (countdown == 0) {
-                    document.getElementById('countdown').textContent = '(Updating...)';
-                } else if (countdown == 1) {
-                    document.getElementById('countdown').textContent = '(Updates in ' + countdown + ' second)';
-                } else {
-                    document.getElementById('countdown').textContent = '(Updates in ' + countdown + ' seconds)';
-                }
-                // Decrement the countdown
-                countdown--;
-            }
-            // Update the countdown every second
-            let countdown = 10;
-            setInterval(updateCountdown, 1000);
-            // Refresh the table every 10 seconds
-            setInterval(refreshTable, 10000);
-
+        <script> 
             function searchFunction() {
               // Declare variables
               var input, filter, table, tr, td, i, txtValue;
@@ -253,8 +234,10 @@
                 var db = firebase.firestore();
 
                 // Fetch the printerdata from Firestore
-                db.collection("printerdata").get().then((querySnapshot) => {
+                db.collection("printerdata").onSnapshot((querySnapshot) => {
                     var table = document.getElementById('printerTableBody');
+                    table.innerHTML = ''; // Clear the table before adding new data
+
                     querySnapshot.forEach((doc) => {
                         var item = doc.data();
                         var row = table.insertRow(-1);
@@ -262,11 +245,13 @@
                         var cell2 = row.insertCell(1);
                         var cell3 = row.insertCell(2);
                         var cell4 = row.insertCell(3);
+
                         cell1.innerHTML = item.name + " (Data fetched at:" + item.updateTime + ")";
                         cell2.innerHTML = item.type;
                         cell3.innerHTML = '<a href="' + item.address + '" target="_blank">' + item.address + '</a>';
                         cell4.innerHTML = item.status;
                         cell4.className = 'status-cell';
+
                         // Cleaning the status
                         if (item.status == "Printing") {
                             cell4.innerHTML = '<div>' + item.status + ' (' + Math.round(item.progress) + '%)</div>' + '<div><progress class="status-progress" value="' + item.progress + '" max="100"></progress></div>';
@@ -302,17 +287,12 @@
                                 sortTable(lastSortColumn);
                             }
                         }
-                        // Reset the countdown
-                        countdown = 9;
                         searchFunction();
                     });
-                })
-                .catch(error => {
+                }, error => {
                     console.error('Error:', error);
                     // Hide loading text
                     document.getElementById('loading').style.display = 'none';
-                    // Reset the countdown
-                    countdown = 9;
                 });
             }
 
