--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2 style="text-decoration: underline; padding-left: 1%;">3D Printere</h2>  
         <p style="padding-left: 1%;">Her kan du se statusen til de fleste av 3D printerne på Elvebakken VGSs skaperversted!</p>
         <p style="padding-left: 1%;">Du kan også bruke octofarm til å se status på printeren: <a href="http://192.168.3.101:3069/" target="_blank">http://192.168.3.101:3069/</a></p>
-        <p style="padding-left: 1%;">For å kunne bruke dem må du koble deg til 3D-printer wifi netverket med <span style="font-weight: bold;">passord: 'Skaperverksted'</span><p>
+        <p style="padding-left: 1%;">For å kunne bruke dem må du koble deg til 3D-printer wifi netverket<p>
         <p style="padding-left: 1%;">Så kan du gå inn på en av adressene under for å begynne å bruke Octoprint. Octoprint innlogging: <span style="font-weight: bold;">Brukernavn: 'Makerspace' Passord: 'user'</span></p>
         <a href="oppsetcura">Hvordan sette opp Cura for enda enklere printing med Octoprint.</a>
         
