--- a/oppsett/index.html
+++ b/oppsett/index.html
@@ -16,12 +16,12 @@
             <nav>
                 <div class="topnav-content">
                     <button class="hamburger-menu" onclick="toggleMenu()">&#9776;</button>
-                    <a id = "mobiletitle" class = "navelement selected" href="/">Makerspace Dashboard</a>
+                    <a id = "mobiletitle" class = "navelement selected" href="/makerspacedashboard">Makerspace Dashboard</a>
                 </div>
                 <ul class = "navbar">
                     <li><a class = "navelement" href="/oppsett">Oppsett</a></li>
                     <li><a class = "navelement" href="/cura">Cura</a></li>
-                    <li><a id = "title" class = "navelement selected" href="/">Makerspace Dashboard</a></li>
+                    <li><a id = "title" class = "navelement selected" href="/makerspacedashboard">Makerspace Dashboard</a></li>
                     <li><a class = "navelement" id = "octofarmButton" href="http://192.168.3.101:3069/" target="_blank">Octofarm <i class="fas fa-external-link-alt"></i></a></li>
                 </ul>
             </nav>
