--- a/cura/index.html
+++ b/cura/index.html
@@ -21,8 +21,8 @@
                     <a id = "mobiletitle" class = "navelement selected" href="/makerspacedashboard">Makerspace Dashboard</a>
                 </div>
                 <ul class = "navbar">
-                    <li><a class = "navelement" href="/oppsett">Oppsett</a></li>
-                    <li><a class = "navelement" href="/cura">Cura</a></li>
+                    <li><a class = "navelement" href="/makerspacedashboard/oppsett">Oppsett</a></li>
+                    <li><a class = "navelement" href="/makerspacedashboard/cura">Cura</a></li>
                     <li><a id = "title" class = "navelement selected" href="/makerspacedashboard">Makerspace Dashboard</a></li>
                     <li><a class = "navelement" id = "octofarmButton" href="http://192.168.3.101:3069/" target="_blank">Octofarm <i class="fas fa-external-link-alt"></i></a></li>
                 </ul>
