--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- Firebase stuff -->
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-        <script src="/js/firebaseInnit.js"></script>
+        <script src="js/firebaseInnit.js"></script>
 
     </body>
 </html>
