--- a/cura/index.html
+++ b/cura/index.html
@@ -13,7 +13,7 @@
     <body>
         <script src="../js/sitewide.js" defer></script>
 
-        <hr>
+        <p></p>
         <div class = "topnav">
             <nav>
                 <div class="topnav-content">
@@ -28,7 +28,6 @@
                 </ul>
             </nav>
         </div>
-        <hr>
 
         <h2 style="text-decoration: underline; padding-left: 1%;" id="undertitle">Cura printer profiler</h2>
 
@@ -47,7 +46,7 @@
             <i class="fas fa-download"></i> Cura 5.6
         </a>
         
-        <hr>
+        <hr color="#232323">
         <div style="padding-left: 1%;">
             <p>For å bruke dem start med å laste ned og installere <a href="https://ultimaker.com/software/ultimaker-cura/" target="_blank">Cura</a>.</p>
             <p>Så søker du etter '%appdata%' og åpner den mappa.</p>
@@ -56,7 +55,7 @@
             <p>Gå så inn i mappen med navnet 'cura'. Inne i cura mappa skal det være mapper til hver av cura versjonene du har installert, i dette tilfelle er versjon 5.5 og 5.6 installert.</p>
             <img src="../assets/imgs/curafolder.png" alt="curaFolder" class="expIMG">
             
-            <p >Pakk ut zip filen du lastet ned i sted <a style = "color: black" href="#undertitle">(knappene ovenfor)</a> og bytt ut mappen med samme navn (versjon) i cura mappa.<br>Eksempel: Skulle jeg brukt cura versjon 5.5 ville jeg slettet mappen med navn '5.5', for og så flytte mappen jeg lastet ned og pakket ut inn i cura mappa.</p>
+            <p >Pakk ut zip filen du lastet ned i sted <a style = "color: white" href="#undertitle">(knappene ovenfor)</a> og bytt ut mappen med samme navn (versjon) i cura mappa.<br>Eksempel: Skulle jeg brukt cura versjon 5.5 ville jeg slettet mappen med navn '5.5', for og så flytte mappen jeg lastet ned og pakket ut inn i cura mappa.</p>
 
             <p style="color: red; font-weight: bolder;">NB: Sørg for at Cura er lukket imens du sletter og bytter på filenen!</p> 
 
@@ -65,9 +64,11 @@
             <img src="../assets/imgs/printere.png" alt="cura" class="expIMG">
         </div>
 
+        <!--Footer-->
         <footer>
-            <hr>
-            <p style="text-align: center; font-size: 9px;">Laget av <a href="https://tbf3d.com", target = "_blank">Trym</a></p>
+            <div id="footerDiv">
+                <p class="footerText">Laget av <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a></p>
+            </div>
         </footer>
 
     </body>
