--- a/oppsett/index.html
+++ b/oppsett/index.html
@@ -11,7 +11,7 @@
     <body>
         <script src="../js/sitewide.js" defer></script>
 
-        <hr>
+        <p></p>
         <div class = "topnav">
             <nav>
                 <div class="topnav-content">
@@ -26,7 +26,6 @@
                 </ul>
             </nav>
         </div>
-        <hr>
 
         <!--Oppsett-->
         <div style="padding-left: 1%;">
@@ -38,8 +37,14 @@
 
         <!--Footer-->
         <footer>
-            <hr>
-            <p style="text-align: center; font-size: 9px;">Laget av <a href="https://tbf3d.com", target = "_blank">Trym</a></p>
+            <div id="footerDiv">
+                <p class="footerText">Laget av <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a></p>
+            </div>
         </footer>
     </body>
+    <style>
+        p, h2 {
+            color: white;
+        }
+    </style>
 </html>
