--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <script src="js/mainsite.js" defer></script>
         <script src="js/sitewide.js" defer></script>
+        <script src="js/progress.js"></script>
 
         <!--Top nav-->
         <p></p>
@@ -38,8 +39,7 @@
                 <i class="fas fa-table"></i> <!-- Table icon -->
             </button>
             <p id="updatedAutoText">
-                The values are updated automatically.
-                <i class="fas fa-sync"></i>
+                Updates automatically <i class="fas fa-check"></i> <!-- Checkmark icon -->
             </p>
         </div>
         <!--Printer tabel-->
