Final release for the time being

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!--3D Printere-->
         <!--Search field-->
-        <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Søk etter printer, model eller status (Ctrl + K)">
+        <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Søk etter printer, model, status eller adresse (Ctrl + K)">
         <div class="underSearchDiv">
             <button id = "switchDisplayBTN" onclick="switchDisplay()">
                 Switch to tableview
@@ -66,7 +66,7 @@
         <!--Footer-->
         <footer>
             <div id="footerDiv">
-                <p class="footerText">Laget av <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a></p>
+                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/", target = "_blank">Anders</a></p>
             </div>
         </footer>
 
