--- a/oppsett/index.html
+++ b/oppsett/index.html
@@ -38,7 +38,7 @@
         <!--Footer-->
         <footer>
             <div id="footerDiv">
-                <p class="footerText">Laget av <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a></p>
+                <p class="footerText">Medvirkende: <a class="footerText" href="https://tbf3d.com", target = "_blank">Trym</a>, <a class="footerText" href="https://meanders1.github.io/", target = "_blank">Anders</a></p>
             </div>
         </footer>
     </body>
