Varius read saving messures
Pausing inactiv tabs, only reading from updated documents, pausing multi tabs

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </p>
         </div>
         <!--Printer tabel-->
-        <table id="printerTable">
+        <table id="printerTable" style = "display: none;">
             <thead id="printerTableHeader">
             <tr><th>Navn <span class="sortable" onclick="sortTable(0, event)">&uarr;</span></th>
                 <th>Model <span class="sortable" onclick="sortTable(1, event)">&uarr;</span></th>
