--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
         <script src="js/firebaseInnit.js"></script>
+
+        <div id="bottomBanner">
+            <p id="updatedAutoTextBottomBar">
+                Updates automatically <i class="fas fa-check"></i> <!-- Checkmark icon -->
+            </p>
+        </div>
         
         <!--Footer-->
         <footer>
