--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head lang="en">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Makerspace Dashboard</title>
         <link type="text/css" href="mainsite.css" rel="stylesheet"> 
         <!-- Add Font Awesome CDN link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+        <!-- Add Favicon -->
+        <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <script src="js/mainsite.js" defer></script>
