La til hyllekode, fikset bug med eta printid, og la til forklaring på db

--- a/oppsett/index.html
+++ b/oppsett/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Makerspace Dashboard: Oppsett</title>
         <link type="text/css" href="../mainsite.css" rel="stylesheet"> 
+        <link type="text/css" href="/oppsett.css" rel="stylesheet"> 
         <!-- Add Font Awesome CDN link -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     </head>
@@ -34,6 +35,8 @@
         <p>Så klikker du på en av linkene i dashboard tabbet for å begynne å bruke Octoprint.</p>
         <p>Innlogging Octoprint: <span style="font-weight: bold;">Brukernavn: 'Makerspace' Passord: 'user'</span></p>
         </div>
+        
+        <img src="../assets/imgs/MSDForklaring.png" alt="Forklaring av hva infoen på grid tilesa betyr." class="expIMG">
 
         <!--Footer-->
         <footer>
