Oppdaterte søk teksten så den inkluderes printer posisjon

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!--3D Printere-->
         <!--Search field-->
-        <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Søk etter printer, model, status eller adresse (Ctrl + K)">
+        <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Søk etter printer, model, status, posisjon eller adresse (Ctrl + K)">
         <div class="underSearchDiv">
             <button id = "switchDisplayBTN" onclick="switchDisplay()">
                 Switch to tableview
