Made tooltip for printernote better and tmeporary warning message

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         <script src="js/mainsite.js" defer></script>
         <script src="js/sitewide.js" defer></script>
         <script src="js/progress.js"></script>
+        
+        <div id="problemdiv">
+            <button id="dismissProblemDivButton">
+                <i class="fas fa-times"></i>
+            </button>
+            <h3 id="problemtext">(12.09.2024 09:05) Because of a bug in the system, printerupdates are not available, this should be fixed by tomorrow.</h3>
+        </div>
 
         <!--Top nav-->
         <p></p>
